; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-pretty-print.c_pp_c_character_constant.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-pretty-print.c_pp_c_character_constant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wchar_type_node = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"\\x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @pp_c_character_constant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pp_c_character_constant(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i64 @TREE_TYPE(i64 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @wchar_type_node, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @pp_character(i32* %12, i8 signext 76)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @pp_quote(i32* %15)
  %17 = load i64, i64* %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @TYPE_UNSIGNED(i64 %18)
  %20 = call i64 @host_integerp(i64 %17, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %29

22:                                               ; preds = %14
  %23 = load i32*, i32** %3, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @TYPE_UNSIGNED(i64 %25)
  %27 = call i32 @tree_low_cst(i64 %24, i32 %26)
  %28 = call i32 @pp_c_char(i32* %23, i32 %27)
  br label %35

29:                                               ; preds = %14
  %30 = load i32*, i32** %3, align 8
  %31 = load i64, i64* %4, align 8
  %32 = call i64 @TREE_INT_CST_LOW(i64 %31)
  %33 = trunc i64 %32 to i32
  %34 = call i32 @pp_scalar(i32* %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %29, %22
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @pp_quote(i32* %36)
  ret void
}

declare dso_local i64 @TREE_TYPE(i64) #1

declare dso_local i32 @pp_character(i32*, i8 signext) #1

declare dso_local i32 @pp_quote(i32*) #1

declare dso_local i64 @host_integerp(i64, i32) #1

declare dso_local i32 @TYPE_UNSIGNED(i64) #1

declare dso_local i32 @pp_c_char(i32*, i32) #1

declare dso_local i32 @tree_low_cst(i64, i32) #1

declare dso_local i32 @pp_scalar(i32*, i8*, i32) #1

declare dso_local i64 @TREE_INT_CST_LOW(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
